--- a/AngularJS/src/app/pages/main-page/main-page.component.html
+++ b/AngularJS/src/app/pages/main-page/main-page.component.html
@@ -1,47 +1,54 @@
 <div class="content">
-    <div class="employees">
-        <table id="employeeTable">
-            <thead>
-                <tr>
-                    <th>SSN</th>
-                    <th>First Name</th>
-                    <th>Middle Initial</th>
-                    <th>Last Name</th>
-                    <th>Date Of Birth</th>
-                    <th>Address</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let employee of employees">
-                    <td>{{ employee.ssn }}</td>
-                    <td>{{ employee.Fname }}</td>
-                    <td>{{ employee.Minit }}</td>
-                    <td>{{ employee.Lname }}</td>
-                    <td>{{ employee.dob }}</td>
-                    <td>{{ employee.address }}</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="buttons">
+        <button (click)="addEmployee()">Add Employee</button>
+        <button (click)="addDependent()" style="background-color: #ffc107;">Add Dependent</button>
     </div>
-    <div class="dependents">
-        <table id="employeeTable">
-            <thead>
-                <tr>
-                    <th>SSN</th>
-                    <th>Name</th>
-                    <th>Relationship</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let dependent of dependents">
-                    <td>{{ dependent.ssn }}</td>
-                    <td>{{ dependent.name }}</td>
-                    <td>{{ dependent.relationship }}</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="tables">
+        <div class="employees">
+            <table id="employeeTable">
+                <thead>
+                    <tr>
+                        <th>SSN</th>
+                        <th>First Name</th>
+                        <th>Middle Initial</th>
+                        <th>Last Name</th>
+                        <th>Date Of Birth</th>
+                        <th>Address</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let employee of employees">
+                        <td (click)="editEmployee(employee.ssn)" class="link">{{ employee.ssn }}</td>
+                        <td>{{ employee.Fname }}</td>
+                        <td>{{ employee.Minit }}</td>
+                        <td>{{ employee.Lname }}</td>
+                        <td>{{ formatDob(employee.dob) }}</td>
+                        <td>{{ employee.address }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="dependents">
+            <table id="employeeTable">
+                <thead>
+                    <tr>
+                        <th>SSN</th>
+                        <th>Name</th>
+                        <th>Relationship</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let dependent of dependents">
+                        <td (click)="editDependent(dependent.ssn)" class="link">{{ dependent.ssn }}</td>
+                        <td>{{ dependent.name }}</td>
+                        <td>{{ dependent.relationship }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <div class="message">
         <p *ngIf="message != ''"></p>
     </div>
 </div>
+
