--- a/AngularJS/src/app/pages/main-page/main-page.component.scss
+++ b/AngularJS/src/app/pages/main-page/main-page.component.scss
@@ -114,9 +114,10 @@
     }
     .message {
         p {
-            color: grey;
+            color: red;
             font-size: 20px;
-
+            font-weight: bold;
+            text-align: center;
         }
     }
 }
