--- a/AngularJS/src/app/pages/dependent/dependent.component.scss
+++ b/AngularJS/src/app/pages/dependent/dependent.component.scss
@@ -1,32 +1,102 @@
+$font-size: 19px;
+$margin: 13px;
+
 .content {
     display: flex;
-    width: 50%;
-    margin: auto;
     flex-direction: column;
-    border: 1px solid red;
-    input {
-        border: 1px solid saddlebrown;
-        width: 250px;
+    margin: auto;
+    height: 80vh;
+    width: 100vw;
+    .heading {
+        margin-top: 100px;
+        font-size: 40px;
+        font-weight: bold;
+        text-align: center;
     }
-    button {
-        border: 1px solid seagreen;
-        border: none;
-        padding-left: 10px;
-        width: fit-content;
-        border-radius: 10px;
-        padding-right: 10px;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        color: white;
-        font-size: 18px;
-        background-color: #28a745;
-        
-        &:hover {
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5); 
-            cursor: pointer;
+    .dependent {
+        box-shadow: 0 0px 20px rgba(0, 0, 0, 0.3);
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        width: 450px;
+        height: fit-content;
+        .ssn {
+            display: flex;
+            flex-direction: row;
+            margin-bottom: $margin;
+            label {
+                font-size: $font-size;
+                width: 50%;
+            }
+            input {
+                font-size: $font-size;
+                width: 50%;
+            }
         }
-        &:active {
-            transition: transform 0.2s ease;
+        .name {
+            display: flex;
+            flex-direction: row;
+            margin-bottom: $margin;
+            label {
+                font-size: $font-size;
+                width: 50%;
+            }
+            input {
+                font-size: $font-size;
+                width: 50%;
+            }
         }
+        .relationship {
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 40px;
+            label {
+                font-size: $font-size;
+                width: 50%;
+            }
+            input {
+                font-size: $font-size;
+                width: 50%;
+            }
+        }
+        .buttons {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            .update {
+                display: flex;
+                font-size: $font-size;
+                font-size: 20px;
+                color: #fff;
+                background-color: #28a745;
+                border-color: #28a745;
+                cursor: pointer;
+                &:hover {
+                    background-color: rgba(40, 167, 69, 0.8);
+                }
+            }
+            .delete {
+                display: flex;
+                font-size: $font-size;
+                font-size: 20px;
+                color: #fff;
+                background-color: #dc3545;
+                border-color: #dc3545;
+                cursor: pointer;
+                &:hover {
+                    background-color: rgba(220, 53, 69, 0.8);
+                }
+            }
+        }
+    }
+}
+.message {
+    p {
+        color: red;
+        font-size: 20px;
+        font-weight: bold;
+        text-align: center;
+        margin-top: -50px;
     }
 }
