--- a/AngularJS/src/app/pages/employee/employee.component.html
+++ b/AngularJS/src/app/pages/employee/employee.component.html
@@ -1,1 +1,69 @@
-<p>employee works!</p>
+<div *ngIf="!edit" class="content">
+    <div class="heading">Add Employee</div>
+    <div class="employee">
+        <div class="ssn">
+            <label for="ssn">Social Security Number:</label>
+            <input type="number" (change)="onSSNChange($event)" required>
+        </div>
+        <div class="Fname">
+            <label for="Fname">First Name:</label>
+            <input type="text" (change)="onFirstNameChange($event)" required>
+        </div>
+        <div class="Minit">
+            <label for="Minit">Middle Initial:</label>
+            <input type="text" (change)="onMiddleInitialChange($event)" required>
+        </div>
+        <div class="Lname">
+            <label for="Lname">Last Name:</label>
+            <input type="text" (change)="onLastNameChange($event)" required>
+        </div>
+        <div class="dob">
+            <label for="dob">Date of Birth:</label>
+            <input type="date" (change)="onDateOfBirthChange($event)" required>
+        </div>
+        <div class="address">
+            <label for="address">Address:</label>
+            <input type="text" (change)="onAddressChange($event)" required>
+        </div>
+        <div class="buttons">
+            <button (click)="addEmployee()" class="update" style="margin: auto;">Add Employee</button>
+        </div>
+    </div>
+</div>
+<div *ngIf="edit" class="content">
+    <div class="heading">Edit Employee</div>
+    <div class="employee">
+        <div class="ssn">
+            <label for="ssn">Social Security Number:</label>
+            <input type="number" (change)="onSSNChange($event)" required [value]="employee?.ssn" readonly>
+        </div>
+        <div class="Fname">
+            <label for="Fname">First Name:</label>
+            <input type="text" (change)="onFirstNameChange($event)" required [value]="employee?.Fname">
+        </div>
+        <div class="Minit">
+            <label for="Minit">Middle Initial:</label>
+            <input type="text" (change)="onMiddleInitialChange($event)" required [value]="employee?.Minit">
+        </div>
+        <div class="Lname">
+            <label for="Lname">Last Name:</label>
+            <input type="text" (change)="onLastNameChange($event)" required [value]="employee?.Lname">
+        </div>
+        <div class="dob">
+            <label for="dob">Date of Birth:</label>
+            <input type="date" (change)="onDateOfBirthChange($event)" required>
+        </div>
+        <div class="address">
+            <label for="address">Address:</label>
+            <input type="text" (change)="onAddressChange($event)" required [value]="employee?.address">
+        </div>
+        <div class="buttons">
+            <button (click)="deleteEmployee()" class="delete">Delete Employee</button>
+            <button (click)="addDependent()" class="add">Add Dependent</button>
+            <button (click)="updateEmployee()" class="update">Update Employee</button>
+        </div>
+    </div>
+</div>
+<div class="message">
+    <p *ngIf="message != ''">{{ message }}</p>
+</div>
