--- a/AngularJS/src/app/pages/main-page/main-page.component.html
+++ b/AngularJS/src/app/pages/main-page/main-page.component.html
@@ -1,4 +1,18 @@
 <div class="content">
+    <div class="searchEmployeeDependent">
+        <div class="searchEmployee">
+            <form class="formDiv" (submit)="searchEmployee()">
+              <input class="search" type="text" (change)="onChange($event)" placeholder="Search Employee" >
+              <button type="submit" class="submitButton"><img src="../../../assets/search-icon.png" alt="" ></button>
+            </form>
+          </div>
+          <div class="searchDependent">
+            <form class="formDiv" (submit)="searchDependent()">
+              <input class="search" type="text" (change)="onChange($event)" placeholder="Search Dependent" >
+              <button type="submit" class="submitButton"><img src="../../../assets/search-icon.png" alt="" ></button>
+            </form>
+          </div>
+    </div>
     <div class="buttons">
         <button (click)="addEmployee()">Add Employee</button>
     </div>
