--- a/AngularJS/src/app/pages/main-page/main-page.component.scss
+++ b/AngularJS/src/app/pages/main-page/main-page.component.scss
@@ -2,6 +2,38 @@
     display: flex;
     padding: 2em;
     flex-direction: column;
+    .searchEmployeeDependent {
+        margin-top: 50px;
+        margin-bottom: -20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 65vw;
+        margin-left: 310px;
+        .formDiv {
+            display: flex;
+            align-items: center;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+            padding: 3px;
+            border-radius: 10px;
+        }
+        .search {
+            border: none;
+            height: 30px;
+            font-size: 19px;
+        }
+        .submitButton {
+            border: none;
+            padding: 0;
+            height: 27.5px;
+            img {
+                display: flex;
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
     .buttons {
         padding: 2em;
         display: flex;
