--- a/AngularJS/src/app/pages/main-page/main-page.component.scss
+++ b/AngularJS/src/app/pages/main-page/main-page.component.scss
@@ -9,28 +9,66 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        width: 65vw;
-        margin-left: 310px;
-        .formDiv {
+        width: 72%;
+        margin-left: 20em;
+        .searchEmployee {
             display: flex;
-            align-items: center;
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
-            padding: 3px;
-            border-radius: 10px;
-        }
-        .search {
-            border: none;
-            height: 30px;
-            font-size: 19px;
-        }
-        .submitButton {
-            border: none;
-            padding: 0;
-            height: 27.5px;
-            img {
+            .formDiv {
                 display: flex;
-                width: 100%;
-                height: 100%;
+                align-items: center;
+                box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+                padding: 3px;
+                border-radius: 10px;
+                .search {
+                    border: none;
+                    height: 30px;
+                    font-size: 19px;
+                }
+                .submitButton {
+                    border: none;
+                    padding: 0;
+                    height: 27.5px;
+                    img {
+                        display: flex;
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
+            .resetEmp {
+                margin-left: 10px;
+                cursor: pointer;
+                font-size: 16px;
+            }
+        }
+        .searchDependent {
+            display: flex;
+            .formDiv {
+                display: flex;
+                align-items: center;
+                box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+                padding: 3px;
+                border-radius: 10px;
+                .search {
+                    border: none;
+                    height: 30px;
+                    font-size: 19px;
+                }
+                .submitButton {
+                    border: none;
+                    padding: 0;
+                    height: 27.5px;
+                    img {
+                        display: flex;
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
+            .resetDep {
+                margin-left: 10px;
+                cursor: pointer;
+                font-size: 16px;
             }
         }
     }
@@ -69,6 +107,7 @@
         .employees {
             display: flex;
             width: 60%;
+            height: fit-content;
             button {
                 display: flex;
                 width: fit-content;
@@ -110,7 +149,7 @@
         .dependents {
             display: flex;
             width: 30%;
-            
+            height: fit-content;
             table {
                 width: 100%;
                 border: 1px solid #ddd;
