--- a/AngularJS/src/app/pages/employee/employee.component.html
+++ b/AngularJS/src/app/pages/employee/employee.component.html
@@ -3,19 +3,19 @@
     <div class="employee">
         <div class="ssn">
             <label for="ssn">Social Security Number:</label>
-            <input type="number" (change)="onSSNChange($event)" required>
+            <input type="number" min="0" (change)="onSSNChange($event)" required>
         </div>
         <div class="Fname">
             <label for="Fname">First Name:</label>
-            <input type="text" (change)="onFirstNameChange($event)" required>
+            <input type="text" maxlength="20" (change)="onFirstNameChange($event)" required>
         </div>
         <div class="Minit">
             <label for="Minit">Middle Initial:</label>
-            <input type="text" (change)="onMiddleInitialChange($event)" required>
+            <input type="text" maxlength="1" (change)="onMiddleInitialChange($event)" required>
         </div>
         <div class="Lname">
             <label for="Lname">Last Name:</label>
-            <input type="text" (change)="onLastNameChange($event)" required>
+            <input type="text" maxlength="20" (change)="onLastNameChange($event)" required>
         </div>
         <div class="dob">
             <label for="dob">Date of Birth:</label>
@@ -23,7 +23,7 @@
         </div>
         <div class="address">
             <label for="address">Address:</label>
-            <input type="text" (change)="onAddressChange($event)" required>
+            <input type="text" maxlength="20" (change)="onAddressChange($event)" required>
         </div>
         <div class="buttons">
             <button (click)="addEmployee()" class="update" style="margin: auto;">Add Employee</button>
@@ -35,19 +35,19 @@
     <div class="employee">
         <div class="ssn">
             <label for="ssn">Social Security Number:</label>
-            <input type="number" (change)="onSSNChange($event)" required [value]="employee.ssn" readonly>
+            <input type="number" min="0" (change)="onSSNChange($event)" required [value]="employee.ssn" readonly>
         </div>
         <div class="Fname">
             <label for="Fname">First Name:</label>
-            <input type="text" (change)="onFirstNameChange($event)" required [value]="employee.Fname">
+            <input type="text" maxlength="20" (change)="onFirstNameChange($event)" required [value]="employee.Fname">
         </div>
         <div class="Minit">
             <label for="Minit">Middle Initial:</label>
-            <input type="text" (change)="onMiddleInitialChange($event)" required [value]="employee.Minit">
+            <input type="text" maxlength="1" (change)="onMiddleInitialChange($event)" required [value]="employee.Minit">
         </div>
         <div class="Lname">
             <label for="Lname">Last Name:</label>
-            <input type="text" (change)="onLastNameChange($event)" required [value]="employee.Lname">
+            <input type="text" maxlength="20" (change)="onLastNameChange($event)" required [value]="employee.Lname">
         </div>
         <div class="dob">
             <label for="dob">Date of Birth:</label>
@@ -55,7 +55,7 @@
         </div>
         <div class="address">
             <label for="address">Address:</label>
-            <input type="text" (change)="onAddressChange($event)" required [value]="employee.address">
+            <input type="text" maxlength="20" (change)="onAddressChange($event)" required [value]="employee.address">
         </div>
         <div class="buttons">
             <button (click)="deleteEmployee()" class="delete">Delete Employee</button>
